Import of KTHAKORE/SDLx-TTF-0.002 from CPAN.
gitpan-cpan-distribution: SDLx-TTF
gitpan-cpan-version:      0.002
gitpan-cpan-path:         KTHAKORE/SDLx-TTF-0.002.tar.gz
gitpan-cpan-author:       KTHAKORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module SDLx::TTF
 
+0.002 Mon Apr 26 2010
+    - Added xs and src files for SDlx
+
 0.001 Mon Apr 26 14:09:30 2010
     - Made to compile and test 
 
