Import of KTHAKORE/SDLx-TTF-0.004 from CPAN.
gitpan-cpan-distribution: SDLx-TTF
gitpan-cpan-version:      0.004
gitpan-cpan-path:         KTHAKORE/SDLx-TTF-0.004.tar.gz
gitpan-cpan-author:       KTHAKORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module SDLx::TTF
 
+0.004 Mon Apr 27 2010
+    - Fixed useage in test and xs code
+
 0.003 Mon Apr 27 2010
     - Fixed linux compile
     - Added more tests/doc
